--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -1,5 +1,9 @@
 name: Create Azure resources
-on: [workflow_dispatch]
+on: 
+  push:
+    branches:
+      - main
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
